argocd/awx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx
spec:
  hostnames:
    - awx.service.clee.private.morphacy.net
    - awx.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
      port: 443
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: awx-service
          port: 80
          weight: 1
